# straft

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  build.rs
example/grpc/: Cargo.toml  README.md  build.rs
example/grpc/proto/: raft.proto
example/grpc/src/: admin.rs  app.rs  client.rs  grpc.rs  my_client.rs  server.rs  state_machine.rs  types.rs
example/proto/: raft.proto
example/src/: app.rs  client.rs  grpc.rs  server.rs  types.rs
proto/: raft.proto
src/: client.rs  lib.rs  rpc.rs  server.rs  state_machine.rs
src/node/: actor.rs  client.rs  election_timer.rs  entry.rs  executor.rs  logger.rs  mod.rs  role.rs  server.rs  state.rs
