[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Straft gRPC server
name = "straft-server"
path = "src/server.rs"

[[bin]] # Bin to run the Straft gRPC client
name = "straft-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
straft = { path = ".." }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.8"
