[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Straft gRPC server
name = "straft-server"
path = "src/server.rs"

[[bin]] # Bin to run the Straft gRPC client
name = "straft-client"
path = "src/client.rs"

[dependencies]
straft = { path = ".." }
anyhow = "1"
env_logger = "0.9.0"
prost = "0.11"
slog = "2.7"
slog-async = "2.7"
slog-term = "2.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
